# homesrv

./: .gitignore  README.md  pyproject.toml
src/: install_systemd_service.sh
src/DButils/: DBdisruptionsAPI.py  DBtimetableAPI.py  DBtimetableHelpers.py  __init__.py  dbtool.py
src/awido/: __init__.py  awidoAPI.py  awidotool.py  demo.py
src/homesrv/: HomeSrvHtml.py  __init__.py  config-template.yaml  config.py  homeserver.py  homesrv-html.py  homesrv-mqtt.py  mqtt.py
src/homesrv-templates/: homesrv.css  index-template.html
src/homesrvAPI/: DBdisruptionsAPI.py  DBtimetableAPI.py  DBtimetableHelpers.py  __init__.py  awidoAPI.py  ninaAPI.py  openweathermapAPI.py
src/homesrv_html/: generate_html.py  homesrv.html  html-template.html  stylesheet.css
src/homesrvmqtt/: DBtimetableAPI.py  DBtimetableHelpers.py  __init__.py  config-template.yaml  config.py  homesrv.py  homesrvtool.py  mqtt.py  ninaAPI.py  openweathermapAPI.py
src/html-templates/: html-template.html  stylesheet.css
src/nina/: __init__.py  demo.py  ninaAPI.py
src/openweathermap/: __init__.py  demo.py  openweathermapAPI.py
src/templates/: homesrv copy.css  homesrv.css  index-template.html
templates/: config.yaml
