[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homesrv"
description = "Retrieves data from several public available sources and makes them available via HTTP"
dependencies = [
  "pyyaml", 
  "requests",
  "xmltodict",
  "paho-mqtt >= 2.0", 
]  
requires-python = ">=3.8"
authors = [
  {name = "Christian Rödel", email = "christian@roedel.info"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["DeutscheBahn", "awido", "nina", "openweathermap"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3.8"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/croedel/homesrv"

[project.scripts]
homesrv = "homesrv.homeserver:main"
homesrvtool = "homesrv.homesrvtool:main"

[tool.setuptools]
script-files = ["src/install_systemd_service.sh"]

[tool.setuptools.dynamic]
version = {attr = "homesrvmqtt.__version__"}

[tool.setuptools.package-data]
homesrv = ["*.yaml"]
templates = ["*.*"]
